# echo-backend

./: .env.example  DEPLOYMENT.md  README.md  alembic.ini  pyproject.toml  render.yaml  start.py
alembic/: env.py
alembic/versions/: e8e266d267c9_initial_schema.py
app/: __init__.py  config.py  database.py  main.py
app/agent/: __init__.py  prompts.py  voice_agent.py
app/api/: __init__.py  deps.py
app/api/routes/: appointments.py  room.py  summaries.py  users.py
app/models/: __init__.py  appointment.py  summary.py  user.py
app/schemas/: __init__.py  appointment.py  summary.py  user.py
app/services/: __init__.py  appointment_service.py  summary_service.py  user_service.py
